--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,22 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import data from '../data/bancos.json';
+import CardBank from '../components/CardBank.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<section class="mt-4 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-6">
+		
+		{data.map(({ id, banco, nombreCorto, wordmark}) => (
+			<CardBank
+			id={id}
+			banco={banco}
+			nombreCorto={nombreCorto}
+			wordmark={wordmark}
+			/>
+	))}
+		
+	</section>
+	
 </Layout>
