--- a/src/components/CardBank.astro
+++ b/src/components/CardBank.astro
@@ -5,22 +5,21 @@ const { nombreCorto, id, wordmark } = Astro.props;
 const svgPath = `/logos/bancos/${wordmark}.svg`;
 ---
 
-<div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+<article class="link-card w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
   <div class="flex flex-col items-center p-10">
     <img class="w-12 h-12 mb-3 rounded-full shadow-lg" src={svgPath} alt={`Logo de ${nombreCorto}`} />
-    <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{nombreCorto}</h5>
-    <span class="text-sm text-gray-500 dark:text-gray-400">{id}</span>
+    <h5 class="card-title mb-1 text-xl font-medium text-gray-900 dark:text-white">{nombreCorto}</h5>
+    <span class="card-body text-sm text-gray-500 dark:text-gray-400">{id}</span>
     <div class="flex mt-4 md:mt-6">
 
       
 
       <button type="button" class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center me-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500 copy-btn" data-link={wordmark}>
-        <Icons icon="copy" />
-        <span class="sr-only">Copiar logo de {nombreCorto}</span>
+        Copiar SVG
         </button>
     </div>
   </div>
-</div>
+</article>
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
