--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,21 @@
 import Layout from '../layouts/Layout.astro';
 import data from '../data/bancos.json';
 import CardBank from '../components/CardBank.astro';
+import Search from '../components/Search.astro';
+import EmptyState from '../components/ui/EmptyState.astro';
 
 ---
 
 <Layout>
-	<section class="mt-4 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-6">
-		
+	
+	
+
+	<Search/>
+
+	<EmptyState/>
+
+	<section class="mt-4 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-6" id="card-list">
+
 		{data.map(({ id, banco, nombreCorto, wordmark}) => (
 			<CardBank
 			id={id}
@@ -15,7 +24,9 @@ import CardBank from '../components/CardBank.astro';
 			nombreCorto={nombreCorto}
 			wordmark={wordmark}
 			/>
-	))}
+		))}
+
+
 		
 	</section>
 	
