--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,10 +10,10 @@ import "../styles/global.css";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>Astro Basics</title>
+		<title>🏴‍☠️ Mis Recursos</title>
 	</head>
 	<body>
-		<div class="antialiased bg-gray-50 dark:bg-gray-900">
+		<div class="antialiased bg-gray-50 dark:bg-neutral-900">
 			<main class="p-4 min-h-screen pt-20">
 				<slot />
 			</main>
