--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Sidebar from "../components/ui/Sidebar.astro";
 import Toast from "../components/ui/Toast.astro";
 import "../styles/global.css";
 ---
@@ -11,13 +12,20 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>🏴‍☠️ Mis Recursos</title>
+		<link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 	</head>
 	<body>
-		<div class="antialiased bg-gray-50 dark:bg-neutral-900">
-			<main class="p-4 min-h-screen pt-20">
-				<slot />
-			</main>
-		</div>
+
+		<div class="antialiased bg-gray-50 dark:bg-gray-900">
+
+			<Sidebar/>	
+
+				<main class="p-4 md:ml-64 h-auto pt-20 min-h-screen">
+					<slot />
+				</main>
+
+		  </div>
+		  <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 		<script is:inline>
 			const cardList = document.getElementById("card-list"); // Obtener la lista de tarjetas
 			const searchInput = document.getElementById("search-bar"); // Obtener el campo de búsqueda
