--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import data from '../data/bancos.json';
-import CardBank from '../components/CardBank.astro';
-import Search from '../components/Search.astro';
-import EmptyState from '../components/ui/EmptyState.astro';
+import Welcome from '../components/Welcome.astro';
 
 ---
 
 <Layout>
-
-
-	
+	<Welcome/>	
 </Layout>
