--- a/src/components/CardBank.astro
+++ b/src/components/CardBank.astro
@@ -14,8 +14,8 @@ const svgPath = `/logos/bancos/${wordmark}.svg`;
 
       
 
-      <button type="button" class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center me-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500 copy-btn" data-link={wordmark}>
-        Copiar SVG
+      <button type="button" class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center me-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500 copy-btn" data-link={wordmark} id="new-toast">
+        <Icons icon="copy">
         </button>
     </div>
   </div>
@@ -31,16 +31,51 @@ const svgPath = `/logos/bancos/${wordmark}.svg`;
         try {
           const response = await fetch(svgUrl);
           const svgText = await response.text();
-          
+
           // Copiar al portapapeles
           await navigator.clipboard.writeText(svgText);
 
-          button.textContent = "¡Copiado!";
+          // Mostrar toast de éxito
+          const toastContainer = document.getElementById("toast-container");
+          if( toastContainer ) {
+
+          const toast = document.createElement("div");
+          toast.id = "toast-simple";
+          toast.className =
+          "flex my-1 items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg shadow-sm dark:text-gray-400 dark:bg-gray-800";
+        toast.role = "alert";
+        toast.innerHTML = `
+                <div class="text-sm font-normal">🎉 SVG copiado con exito!</div>
+            `;
+
+          toastContainer.appendChild(toast);
+
+          console.log(toast)
+
+          // Eliminar el toast después de 2 segundos
           setTimeout(() => {
-            button.textContent = "Copiar SVG";
+            toast.remove();
           }, 2000);
+        }
+
         } catch (error) {
           console.error("Error al copiar el SVG:", error);
+
+          // Mostrar toast de error
+          const toastContainer = document.getElementById("toast-container");
+          if (toastContainer) {
+
+          const toast = document.createElement("div");
+          toast.innerHTML = `
+            <Toast message="Error al copiar el SVG" type="error" />
+          `;
+          toastContainer.appendChild(toast);
+
+          // Eliminar el toast después de 2 segundos
+          setTimeout(() => {
+            toast.remove();
+          }, 2000);
+          }
         }
       });
     });
