--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,8 @@ import "../styles/global.css";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>🏴‍☠️ Mis Recursos</title>
 		<link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
 	</head>
 	<body>
 
@@ -26,6 +28,8 @@ import "../styles/global.css";
 
 		  </div>
 		  <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+		  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 		<script is:inline>
 			const cardList = document.getElementById("card-list"); // Obtener la lista de tarjetas
 			const searchInput = document.getElementById("search-bar"); // Obtener el campo de búsqueda
