--- a/src/components/ui/Sidebar.astro
+++ b/src/components/ui/Sidebar.astro
@@ -29,8 +29,8 @@ const items = [
     <header class="mb-4">
       <a
         href="/"
-        class="flex text-amber-200 items-center font-black size-7 w-full">
-        <img src={astroLogo.src} class="w-8" alt="Mi Logo">
+        class="flex text-primary items-center font-black size-7 w-full">
+        <img src={astroLogo.src} class="w-8 text-amber-400" alt="Mi Logo">
         <span class="">Mis recursos</span>
       </a>
 
