--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,22 @@ import "../styles/global.css";
 		<link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
+		<script is:inline>
+			const setDarkMode = () => {
+				if (localStorage.darkMode === 'true' || (!('darkMode' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+					document.documentElement.classList.add('dark')
+					localStorage.darkMode = 'true';
+				} else {
+					document.documentElement.classList.remove('dark')
+					localStorage.darkMode = 'false';
+				}
+			}
+	
+			setDarkMode();
+			// Runs on view transitions navigation
+			document.addEventListener('astro:after-swap', setDarkMode);
+		</script>
+
 	</head>
 	<body>
 
@@ -65,11 +81,19 @@ import "../styles/global.css";
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+<style is:global>
+	:root {
+		--accent: #0598d1;
+		--accent-light: #CDEDFA;
+		--accent-dark: #1C7DB1;
+		--accent-gradient: linear-gradient(
+			45deg,
+			rgb(var(--accent)),
+			rgb(var(--accent-light)) 30%,
+			white 60%
+		);
+	}
+	html {
+		font-family: system-ui, sans-serif;
 	}
 </style>
