--- a/src/components/CardBank.astro
+++ b/src/components/CardBank.astro
@@ -1,14 +1,14 @@
 ---
-import Icons from "../icons/Icons.astro";
+import Icons from "@icons/Icons.astro";
 
 const { nombreCorto, id, wordmark } = Astro.props;
 const svgPath = `/logos/bancos/${wordmark}.svg`;
 ---
 
 <article class="link-card w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-neutral-800 dark:border-neutral-700">
-  <div class="flex flex-col items-center p-10">
+  <div class="flex flex-col items-center p-4 md:p-10">
     <img class="w-12 h-12 mb-3 rounded-full shadow-lg" src={svgPath} alt={`Logo de ${nombreCorto}`} />
-    <h5 class="card-title mb-1 text-xl font-medium text-gray-900 dark:text-white">{nombreCorto}</h5>
+    <h5 class="card-title mb-1 text-md md:text-xl font-medium text-gray-900 dark:text-white">{nombreCorto}</h5>
     <span class="card-body text-sm text-gray-500 dark:text-gray-400">{id}</span>
     <div class="flex mt-4 md:mt-6">
 
