--- a/src/components/ui/EmptyState.astro
+++ b/src/components/ui/EmptyState.astro
@@ -1,5 +1,5 @@
 ---
-import Icons from "../../icons/Icons.astro";
+import Icons from "@icons/Icons.astro";
 ---
 <div id="no-results" class="mt-2 hidden">
     <div class="mt-6 flex w-full flex-col items-center justify-center text-gray-600 dark:text-gray-400">
