--- a/src/components/ui/Sidebar.astro
+++ b/src/components/ui/Sidebar.astro
@@ -1,8 +1,11 @@
 ---
-import Icons from "../../icons/Icons.astro"
+import Icons from "@icons/Icons.astro";
 import astroLogo from '../../assets/logo.svg';
+import { iconPaths } from '@components/ui/icons/IconPaths';
 
-const items = [
+const { pathname } = Astro.url
+
+const items: { label: string; link: string; icon: keyof typeof iconPaths; active?: boolean }[] = [
 	{
 		label: 'Inicio',
     link: '/',
@@ -14,6 +17,12 @@ const items = [
       icon:'rocket'
 	}
 ]
+
+
+const pages = items.map((page) => ({
+	...page,
+	active: page.active || pathname === page.link
+}))
 ---
 
 <button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ml-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
@@ -30,7 +39,7 @@ const items = [
       <a
         href="/"
         class="flex text-primary items-center font-black size-7 w-full">
-        <img src={astroLogo.src} class="w-8 text-amber-400" alt="Mi Logo">
+        <img src={astroLogo.src} class="w-8 text-primary" alt="Mi Logo">
         <span class="">Mis recursos</span>
       </a>
 
@@ -40,10 +49,14 @@ const items = [
        <ul class="space-y-2">
 
         {
-          items.map(({ label, link, icon }) => (
+          pages.map(({ label, link, icon, active }) => (
             
           <li>
-            <a href={link} class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+            <a href={link}
+            class:list={[
+                  { "current-page active": active}, "flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group",
+                ]}
+                >
               <Icons icon={icon} size="18"/>
                    <span class="ml-2">{label}</span>
                </a>
@@ -55,3 +68,8 @@ const items = [
 
 
  </aside>
+
+<style>
+  .current-page.active {
+    color: var(--color-accent);
+  }
