--- a/src/components/CreditCard.astro
+++ b/src/components/CreditCard.astro
@@ -1,24 +1,24 @@
 ---
 
-const { logoColor } = Astro.props;
 
 ---
 
 
-    <div id="main-credit-card" class="aspect-[1.586/1] relative w-full max-w-sm rounded-xl shadow-2xl p-6 text-white overflow-hidden transform transition-transform duration-300 ease-in-out" style={`background-color: ${logoColor};`}>
-        <div class="absolute -top-4 -right-20">
+    <div class="aspect-[1.586/1] relative w-full max-w-sm rounded-xl shadow-2xl p-6 text-white overflow-hidden transform hover:scale-105 transition-transform duration-300 ease-in-out">
+        <div class="absolute -top-4 -right-20" >
             
         </div>
 
         <div class="relative z-10 flex justify-between items-start mb-6">
 
             
+
             <div class="card-brand-logo">
                 <p>VISA</p>
             </div>
         </div>
     </div>
-
+))}
 
     
 
