--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ import "../styles/global.css";
 
 			<Sidebar/>	
 
-				<main class="p-4 md:ml-64 h-auto pt-20 min-h-screen">
+				<main class="p-4 md:ml-64 h-auto md:pt-20 min-h-screen">
 					<slot />
 				</main>
 
